--- a/JS/Code2.html
+++ b/JS/Code2.html
@@ -6,8 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="problem4.js"></script> -->
-    <script src="BMI.js"></script>
-    <script src="Code2.js"></script>
+    <script>
+      //   let egg = eggs[1];
+      let eggs = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
+      console.log(eggs.reverse());
+    </script>
   </body>
 </html>
